2003-05-18  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-yahoo.el (shimbun-yahoo-groups-alist): Add topnews
	group entry.

2003-05-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (Top): Use w3m-treat-drive-letter for
	`w3m-expand-path-name'.

2003-05-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yahoo.el (shimbun-yahoo-x-face-alist): New face.

2003-05-11  NOMIYA Masaru  <nomiya@ttmy.ne.jp>

	* shimbun/sb-yahoo.el (shimbun-yahoo-content-start): Improved the
	default value.

2003-05-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-2ch.el (shimbun-headers): Correct the wrong use of
	`message'.  Thanks to Yoichi NAKAYAMA <yoichi@geiin.org> for his
	suggestion.

	* mime-w3m.el (mime-w3m-preview-text/html): Apply the patch posted
	by Yoichi NAKAYAMA <yoichi@geiin.org> in [emacs-w3m:04836], that
	correct the wrong usage of `message'.

2003-05-06  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-pocketgames.el
	(shimbun-pocketgames-make-mime-article): Modify regexp to pick up
	url properly.

2003-05-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-fontify-anchors): Invalidate the widget keymap in
	XEmacs; add a help-echo to the widget button.
	(w3m-make-minor-mode-keymap): Bind [down-mouse-2] to `undefined'
	to invalidate the `widget-button-click' command in FSF Emacs.

2003-05-05  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-pocketgames.el
	(shimbun-pocketgames-article): New function.
	(shimbun-pocketgames-article-1): Ditto.
	(shimbun-pocketgames-make-mime-article): Ditto.
	(shimbun-pocketgames-headers): New function (Building Message-ID
	with '@' instead of `:' to display inline)
	(shimbun-pocketgames-headers-1): New function.
	(shimbun-article): Use `shimbun-pocketgames-article'.
	(shimbun-headers): Use `shimbun-pocketgames-headers'.
	(shimbun-pocketgames-comment-article): Clean up unnecessary link
	from shimbun working buffer.
	Building Message-ID with '@' instead of `:' to display inline
	images.
